<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <ImageView
      android:id="@+id/imgCover"
      android:layout_height="150dp"
      android:layout_width="150dp"
      android:layout_margin="@dimen/margin"
      android:src="@drawable/image"
      android:contentDescription="@string/cover"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtTypeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin" />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtSongName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin" />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin" />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtAlbumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin" />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtGenreName"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnGetInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lookup"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin"/>

</LinearLayout>